# core-interaction-service

./: .dev.vars.example  .env  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  worker-configuration.d.ts  wrangler.jsonc
app/: analyzer.py  main.py
bruno/: analyze-interactions.bru  bruno.json  create-interaction.bru  get-summary.bru  list-interactions-cctv.bru  list-interactions.bru  search-interactions.bru
container_src/: main.py  pyproject.toml
container_src/crew/: __init__.py  interaction_analysis_crew.py  session_analysis_crew.py
container_src/crew/agents/: __init__.py  behavioral_psychologist.py  cctv_behavior_analyst.py  consumer_psychologist.py  engagement_specialist.py  hci_investigator.py  product_matcher.py  social_sentiment_analyst.py  synthesis_coordinator.py  ux_researcher.py  web_interaction_specialist.py
container_src/crew/tasks/: __init__.py  analyze_cctv_behavior.py  analyze_navigation.py  analyze_social_sentiment.py  analyze_web_interactions.py  classify_intent.py  detect_friction.py  evaluate_engagement.py  match_products.py  synthesize_analysis.py  synthesize_insights.py
container_src/llm/: __init__.py  cloudflare_workers_ai.py
container_src/services/: __init__.py  event_analyzer.py
container_src/utils/: __init__.py  config.py  logger.py
migrations/: 0001_create_interactions.sql  0001_create_interactions_table.sql  0001_create_session_analyses.sql  0002_add_referenced_interactions.sql  0002_recreate_session_analyses.sql  0003_create_calibration_tables.sql
src/: index.ts  (+4 more)
(+67 files in other folders)
